# extract_inner_function

./: README.md  pyproject.toml  test.py
src/extract_inner_function/: __init__.py
src/tests/: main.py
